 - the old semantic of __initcmd is gone.


incompatible change:
====== 
Class O -parameter {
  {a -default 0}
  {b -default {[cmd 3 4]}} c d 
  {e -default 3} 
  {Self -default [self]}
}
Class Meta -superclass Class
Meta C -superclass O -parameter {a {b -default ""} {c -default 1}}
C c1 ;# c1 has no no default value for "a", before it had one
======
2009-07-01 <Gustaf.Neumann@wu-wien.ac.at>
    - moved all definitions of method commands to generated code
    - separated C-code generator from declarations 
      (new file generic/gentclAPI.decls)
    - from 15356 generic/xotcl.c => 13408

2009-06-30 <Gustaf.Neumann@wu-wien.ac.at>
    - all object methods generated
    - added reference counting for patternobj
    - some cleanup and reordering
    - from 15356 generic/xotcl.c => 13884 => 13560

2009-06-29 <Gustaf.Neumann@wu-wien.ac.at>
    - !!! removed obsolete features
      * ability to specify nonpos args and pos args as different arguments
      * compile flags AUTOVARS, REFCOUNTED, REFCOUNT_TRACE
    - added -flags with one argument + type
    - generated all class methods from interface descriptions

2009-06-28 <Gustaf.Neumann@wu-wien.ac.at>
    - objv-stubs for all 23 class info methods
    - changed "<object> info hasNamespace" to "<object> info hasnamespace"
      (all commands and info options are lowercase only, no underscore)
    - all "<object> info" commands generated
    - all check methods generated
    - 3 class methods generated, handling args/allargs

2009-06-27 <Gustaf.Neumann@wu-wien.ac.at>
    - changed method name "instdestroy" into "dealloc"
    - replaced occurrences of "instdestroy" by "dealloc" in documentation
    - new file: tclAPI.h
    - added generator for tclAPI.h
    - added C stub generator to reduce potential errors 
      (generates Tcl_ObjCmdProc from method definitions in Tcl)
    - defined 8 info methods based on the new objv parsing infrastructure

2009-06-25 <Gustaf.Neumann@wu-wien.ac.at>
    - new command:
